Fix immutable list issue and fixed line space